--- a/src/main/resources/templates/email.html
+++ b/src/main/resources/templates/email.html
@@ -209,7 +209,7 @@
                                         <!-- section text ======-->
 
                                         <p style="line-height: 24px; margin-bottom:15px;">
-                                            尊敬的<span th:text="${emailDTO.nick}"></span>：
+                                            尊敬的<span th:text="${emailDTO.nickname}"></span>：
                                         </p>
                                         <p style="line-height: 24px;margin-bottom:15px;">
                                            感谢您注册成为【肆拾杂货铺】的一员！在这里，您将体验到独特的购物乐趣和精彩的商品选择。
