--- a/src/main/resources/templates/email.html
+++ b/src/main/resources/templates/email.html
@@ -146,7 +146,7 @@
 
                                 <tr>
                                     <td align="center" height="90" style="height:90px;">
-                                        <a href="" style="display: block; border-style: none !important; border: 0 !important;"><img width="140" border="0" style="display: block; width: 140px;" src="http://i.imgur.com/xMvmezL.png" alt="" /></a>
+                                        <a href="" style="display: block; border-style: none !important; border: 0 !important;"><img width="140" border="0" style="display: block; width: 140px;" src="../static/img/01.jpg" alt="" /></a>
                                     </td>
                                 </tr>
                             </table>
